Refactor addToCartMerged function to align with firebase rules

--- a/products/product.html
+++ b/products/product.html
@@ -1109,98 +1109,90 @@
       const tail = (parts || []).map(norm).filter(Boolean).join("__");
       return tail ? `${base}__${tail}` : base;
     }
-    async function addToCartMerged(payload) {
-      const user = auth.currentUser;
+async function addToCartMerged(payload) {
+  const user = auth.currentUser;
 
-      const clampInt = (n, min, max) =>
-        Math.max(min, Math.min(max, Math.trunc(Number(n) || 0)));
+  const clampInt = (n, min, max) =>
+    Math.max(min, Math.min(max, Math.trunc(Number(n) || 0)));
 
-      const addQty = clampInt(payload.qty, 1, 99);
+  const safeStr = (s, maxLen) => {
+    const v = String(s ?? "").trim();
+    if (!v) return "";
+    return v.length > maxLen ? v.slice(0, maxLen) : v;
+  };
 
-      const buildCartData = (base) => ({
-        productId: safeStr(base.productId, 200),
-        name: safeStr(base.name, 160),
-        qty: base.qty,
+  // --- minimal required fields ---
+  const productId = safeStr(payload.productId, 200);
+  const variantId = safeStr(payload.variantId, 200); // optional
+  const addQty = clampInt(payload.qty ?? 1, 1, 99);
 
-        price: Math.max(0, Math.min(100000, Number(base.price || 0))),
+  if (!productId) throw new Error("addToCart: missing productId");
 
-        ...(base.productType ? { productType: safeStr(base.productType, 40) } : {}),
-        ...(base.variantId ? { variantId: safeStr(base.variantId, 200) } : {}),
-        ...(base.variantLabel ? { variantLabel: safeStr(base.variantLabel, 220) } : {}),
-        ...(base.buyLink ? { buyLink: safeStr(base.buyLink, 1200) } : {}),
+  // Deterministic doc id: stacks same product+variant
+  const itemId = variantId ? `${productId}__${variantId}` : productId;
 
-        optionParts: Array.isArray(base.optionParts)
-          ? base.optionParts.map(x => safeStr(x, 80)).slice(0, 6)
-          : []
+  // ----------------------------
+  // SIGNED-IN USER (Firestore)
+  // ----------------------------
+  if (user) {
+    const ref = doc(db, "users", user.uid, "cartItems", itemId);
+
+    const snap = await getDoc(ref);
+    const now = Timestamp.now();
+
+    if (!snap.exists()) {
+      // CREATE
+      const docData = {
+        productId,
+        ...(variantId ? { variantId } : {}),
+        qty: addQty,
+        createdAt: now,
+        updatedAt: now,
+      };
+
+      await setDoc(ref, docData); // no merge needed
+    } else {
+      // UPDATE (do NOT touch createdAt)
+      const prevQty = clampInt(snap.data()?.qty ?? 0, 0, 99);
+      const nextQty = clampInt(prevQty + addQty, 1, 99);
+
+      await updateDoc(ref, {
+        ...(variantId ? { variantId } : {}), // harmless to re-send, still allowed
+        qty: nextQty,
+        updatedAt: now,
       });
-
-      // ----------------------------
-      // SIGNED-IN USER (Firestore)
-      // ----------------------------
-      if (user) {
-        const id = cartDocId(payload.productId, payload.optionParts);
-        const ref = doc(db, "users", user.uid, "cartItems", id);
-
-        const existing = await getDoc(ref);
-        const prevQty = existing.exists()
-          ? clampInt(existing.data().qty, 0, 99)
-          : 0;
-
-        const nextQty = clampInt(prevQty + addQty, 1, 99);
-
-        const now = Timestamp.now();
-        const createdAt =
-          existing.exists() && existing.data().createdAt
-            ? existing.data().createdAt
-            : now;
-
-        const data = buildCartData({
-          ...payload,
-          qty: nextQty
-        });
-
-        await setDoc(
-          ref,
-          {
-            ...data,
-            updatedAt: now,
-            createdAt
-          },
-          { merge: true }
-        );
-
-        notifyCartChanged();
-        return;
-      }
-
-      // ----------------------------
-      // SIGNED-OUT (localStorage)
-      // ----------------------------
-      const key = "unlim8ted-cart";
-      const arr = JSON.parse(localStorage.getItem(key) || "[]");
-
-      const id = cartDocId(payload.productId, payload.optionParts);
-      const idx = arr.findIndex(x => x && x._id === id);
-
-      if (idx >= 0) {
-        const prev = clampInt(arr[idx].qty, 0, 99);
-        arr[idx].qty = clampInt(prev + addQty, 1, 99);
-      } else {
-        const data = buildCartData({
-          ...payload,
-          qty: addQty
-        });
-
-        arr.push({
-          _id: id,
-          ...data,
-          addedAt: Date.now()
-        });
-      }
-
-      localStorage.setItem(key, JSON.stringify(arr));
-      notifyCartChanged();
     }
+
+    notifyCartChanged();
+    return;
+  }
+
+  // ----------------------------
+  // SIGNED-OUT (localStorage)
+  // ----------------------------
+  const key = "unlim8ted-cart";
+  const arr = JSON.parse(localStorage.getItem(key) || "[]");
+
+  const idx = arr.findIndex(x => x && (x.id === itemId || x._id === itemId));
+
+  if (idx >= 0) {
+    const prev = clampInt(arr[idx].qty ?? 0, 0, 99);
+    arr[idx].qty = clampInt(prev + addQty, 1, 99);
+    arr[idx].updatedAt = Date.now();
+  } else {
+    arr.push({
+      id: itemId,
+      productId,
+      variantId: variantId || null,
+      qty: addQty,
+      createdAt: Date.now(),
+      updatedAt: Date.now(),
+    });
+  }
+
+  localStorage.setItem(key, JSON.stringify(arr));
+  notifyCartChanged();
+}
 
     // ----------------------------
     // Reviews helpers
@@ -1431,36 +1423,28 @@
           // }
 
           addBtn.disabled = false;
-          addBtn.onclick = async () => {
-            try {
-              await addToCartMerged({
-                productId: item.id,
-                name: item.name,
-                image: (vImgs[0] || item.image || null),
-                qty: 1,
-                price: Number.isFinite(priceNum) ? priceNum : 0,
-                productType: "physical",
-                variantId: vv.id,
-                variantLabel: vv.name || parts.join(", "),
-                optionParts: parts,
-                buyLink: vv.buyLink || ""
-              });
-              toast("Added to cart");
-            } catch (e) {
-              console.log("UID", auth.currentUser?.uid);
-              console.log("ADD TO CART (variant) CONTEXT", {
-                productId: item?.id,
-                productName: item?.name,
-                variantId: vv?.id,
-                variantLabel: vv?.name,
-                optionParts: parts,
-                priceNum,
-              });
-              console.error("addToCartMerged (variant) error:", e?.code, e?.message, e);
-              toast("Could not add to cart");
-            }
+addBtn.onclick = async () => {
+  try {
+    await addToCartMerged({
+      productId: item.id,
+      ...(vv?.id ? { variantId: vv.id } : {}),
+      qty: 1
+    });
+    toast("Added to cart");
+  } catch (e) {
+    console.log("UID", auth.currentUser?.uid);
+    console.log("ADD TO CART (variant) CONTEXT", {
+      productId: item?.id,
+      productName: item?.name,
+      variantId: vv?.id,
+      variantLabel: vv?.name,
+      qty: 1
+    });
+    console.error("addToCartMerged (variant) error:", e?.code, e?.message, e);
+    toast("Could not add to cart");
+  }
+};
 
-          };
         } else {
           selectedVariantLabelEl.textContent = parts.join(", ");
           variantPriceEl.textContent = "$—";
