--- a/products/index.html
+++ b/products/index.html
@@ -28,7 +28,7 @@
   <script type="module" src="/components/site-navbar.js"></script>
   <script type="module" src="/components/site-loader.js"></script>
     <site-loader text="Loading..."></site-loader>
-  <site-navbar cart-href="https://unlim8ted.com/sign-in/cart" signin-href="https://unlim8ted.com/sign-in" profile-href="https://unlim8ted.com/profile"></site-navbar>
+  <site-navbar cart-href="https://unlim8ted.com/cart" signin-href="https://unlim8ted.com/sign-in" profile-href="https://unlim8ted.com/profile"></site-navbar>
     <style>
         /* General body styles */
         body {
