hopefully fix cart in index nav and cart.html maknng them pull data from products.json

--- a/about.html
+++ b/about.html
@@ -548,8 +548,8 @@
       </p>
 
       <div class="cta-row">
-        <a class="btn primary" href="/about-us">Find Out More</a>
-        <a class="btn" href="/portfolio">See Work</a>
+        <a class="btn primary" href="/">Find Out More On Our Homepage</a>
+        <a class="btn" href="/products">Browse Our Products</a>
       </div>
 
       <div class="divider"></div>
